Cloud Consulting/force-app/main/default/objects/Project_Task__c/fields/Costo_Real_Task__c.field-meta.xml
<CustomField>
    <fullName>Costo_Real_Task__c</fullName>
    <formula>Registered_Hours__c  *  Project_Resource__r.Resource__r.Rate_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Real Task</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>