Cloud Consulting/force-app/main/default/objects/Project_Task__c/fields/Sttatus__c.field-meta.xml
<CustomField>
    <fullName>Sttatus__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>