Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/Cant_change_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_status</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Registered_Hours__c    &lt;    Estimated_Hour__c , ISPICKVAL(Status__c, &apos;Completed&apos;) , ISPICKVAL(Status__c, &apos;in progress&apos;))</errorConditionFormula>
    <errorMessage>No se puede compeltar la tarea yq ue las horas registradas no son iguales a las estiamdas</errorMessage>
</ValidationRule>