Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/Cant_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_complete</fullName>
    <active>true</active>
    <description>La tarea debe tener horas registradas ( una o más horas) para poder pasar a &apos;Completed&apos;.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    TEXT(Status__c) = &apos;Completed&apos;,
    Registered_Hours__c &lt;&gt; Estimated_Hour__c
)</errorConditionFormula>
    <errorMessage>Las horas registradas deben ser igual a las estimadas.</errorMessage>
</ValidationRule>