Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/End_date_1.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_1</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &gt;  Project__r.End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>La tarea no puede finalizar despues de la fecha de cierre de proyecto</errorMessage>
</ValidationRule>