Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/end_date_2.validationRule-meta.xml
<ValidationRule>
    <fullName>end_date_2</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Project__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>La tarea no puede terminar antes de comenzar proyecto</errorMessage>
</ValidationRule>