Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/Estimated_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_hours</fullName>
    <active>true</active>
    <errorConditionFormula>Estimated_Hour__c   &gt;  Project_Resource__r.Assigned_Hours__c</errorConditionFormula>
    <errorMessage>Las horas estimadas no pueden ser mayor a las horas asignadas</errorMessage>
</ValidationRule>