Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/Over_Register.validationRule-meta.xml
<ValidationRule>
    <fullName>Over_Register</fullName>
    <active>true</active>
    <description>Las horas registradas deben igualar a las horas estiamdas</description>
    <errorConditionFormula>Registered_Hours__c  &gt;  Estimated_Hour__c</errorConditionFormula>
    <errorMessage>Resgistro demaciadas horas</errorMessage>
</ValidationRule>