Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/paradox_date.validationRule-meta.xml
<ValidationRule>
    <fullName>paradox_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>La fecha de fin debe ser mayor a la fecha de inicio</errorMessage>
</ValidationRule>