Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/start_date_2.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_2</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  Project__r.End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>La tarea no puede comenzar despues del cierre del proyecto</errorMessage>
</ValidationRule>