Cloud Consulting/force-app/main/default/objects/Project_Task__c/validationRules/Start_date_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_limit</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt;  Project__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>La tarea no pueden empezar antes que el proyecto</errorMessage>
</ValidationRule>